<?xml version="1.0" encoding="utf-8"?>

<!-- LAYOUT TIPO "OVERLAY" PARA LA ÚLTIMA PANTALLA DE RESUMEN -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="0dp"
        android:paddingBottom="0dp"
        android:background="@drawable/shape_rectangle">

        <TextView
            android:id="@+id/tv_Resumen"
            style="@style/tv_welcome_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_resumen"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/shapeLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/shapeLine"
            android:layout_width="360dp"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/line_resume"
            android:src="@drawable/shape_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Resumen" />

        <TextView
            android:id="@+id/textView"
            style="@style/tv_welcome_text"
            android:layout_width="342dp"
            android:layout_height="430dp"
            android:layout_marginTop="12dp"
            android:text="@string/tv_resume"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shapeLine" />

        <Button
            android:id="@+id/btn_Comenzar"
            style="@style/tv_comenzar_style"
            android:layout_width="155dp"
            android:layout_height="62dp"
            android:layout_marginTop="32dp"
            android:background="@color/purple_transparent"
            android:text="@string/comenzar"
            android:textColor="#C4FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>