<?xml version="1.0" encoding="utf-8"?>
<!-- LAYOUT CON PENÚLTIMA PANTALLA PARA SEÑALAR EL BOTÓN DE INFORMACIÓN DE LA GUÍA -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_transparent">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fl_info_button"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/shapeImage"
            android:layout_width="294dp"
            android:layout_height="233dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:contentDescription="@string/info_button"
            android:scaleType="centerCrop"
            android:src="@drawable/shape_oval" />

        <TextView
            android:id="@+id/textView"
            style="@style/tv_welcome_text"
            android:layout_width="259dp"
            android:layout_height="157dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/tv_info_button"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </FrameLayout>

    <View
        android:layout_width="232dp"
        android:layout_height="379dp"
        android:layout_gravity="clip_horizontal|end"
        android:layout_marginTop="-210dp"
        android:layout_marginEnd="-100dp"
        android:background="@drawable/shape_ring" />

    <Button
        android:id="@+id/btn_siguiente"
        style="@style/tv_comenzar_style"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="30dp"
        android:text="@string/siguiente" />

</FrameLayout>